welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: not found: value vuBiscuit
	vuBiscuit=false;
        ^Program:4: error: not found: value vuBiscuit
	if (vuBiscuit()== true) {
            ^Program:10: error: not found: value vuBiscuit
			vuBiscuit==true
                        ^Program:15: error: type mismatch;
 found   : Unit
 required: Boolean
	gauche()
              ^